Bug 1814533 - Add IsRegistered() check in PresentCallback() r=gfx-reviewers,lsalzman

There is a case that SwapChain is destroyed between wgpu_server_buffer_map() and PresentCallback().

Differential Revision: https://phabricator.services.mozilla.com/D168912